[gd_scene load_steps=9 format=3 uid="uid://b1ec4aqwmhkjh"]

[ext_resource type="Script" uid="uid://681ttq1dfpoh" path="res://src/game/entities/enemies/turret_enemy/enemy_turret.gd" id="1_1xawl"]
[ext_resource type="PackedScene" uid="uid://dx0xmqw1tn3eh" path="res://src/game/entities/enemies/ammo/ammo.tscn" id="2_4s8kf"]
[ext_resource type="Texture2D" uid="uid://b2573wbkusrnp" path="res://assets/textures/enemies/turret_enemy/idle.png" id="2_e8lrk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x4won"]
radius = 2.1213202

[sub_resource type="SpriteFrames" id="SpriteFrames_e4qyc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_e8lrk")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_e8lrk")
}],
"loop": false,
"name": &"shoot",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_lc1km"]
radius = 108.0

[sub_resource type="Gradient" id="Gradient_phf73"]
interpolation_mode = 2
interpolation_color_space = 2
offsets = PackedFloat32Array(0, 0.9099099)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_e8lrk"]
gradient = SubResource("Gradient_phf73")
width = 512
height = 512
use_hdr = true
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0, 0.5)

[node name="EnemyTurret" type="Area2D"]
scale = Vector2(2, 2)
collision_layer = 8
collision_mask = 4
script = ExtResource("1_1xawl")
projectile_scene = ExtResource("2_4s8kf")

[node name="Pivot" type="Area2D" parent="."]

[node name="OriginZone" type="CollisionShape2D" parent="Pivot"]
position = Vector2(-6, 3)
shape = SubResource("CircleShape2D_x4won")
debug_color = Color(0.89256406, 0.00023641824, 0.78843784, 0.41960785)

[node name="RayCast2D" type="RayCast2D" parent="Pivot/OriginZone"]
position = Vector2(0.5, 0)
target_position = Vector2(-32.5, 31)
collision_mask = 7
collide_with_areas = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Pivot"]
sprite_frames = SubResource("SpriteFrames_e4qyc")
animation = &"shoot"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 8
visibility_layer = 8
shape = SubResource("CircleShape2D_lc1km")
debug_color = Color(0.8007278, 0.4206606, 0.002920189, 0.41960785)

[node name="ShootTimer" type="Timer" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="." groups=["dynamic_light"]]
texture_filter = 1
position = Vector2(0.6666667, -4.666667)
scale = Vector2(0.3, 0.3)
enabled = false
color = Color(0.7201324, 0.3888003, 0.004268235, 1)
energy = 0.69
shadow_color = Color(0, 0, 0, 0.9254902)
shadow_filter = 1
texture = SubResource("GradientTexture2D_e8lrk")
metadata/_edit_group_ = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="animation_finished" from="Pivot/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
